<resources>
    <string name="app_name">Business Directory</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_add_enterprise">"Add Enterprise "</string>
    <string name="name">Name</string>
    <string name="url">Url</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="products">Products and Services</string>
    <string name="classification">Classification</string>
    <string name="required">Required</string>
    <string name="success_saved">Saved successful</string>
</resources>
